--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "vinyl-source-stream": "^2.0.0"
   },
   "dependencies": {
+    "@ledgerhq/hw-transport-http": "^6.0.2",
     "@ledgerhq/hw-transport": "^5.51.1",
     "@ledgerhq/hw-transport-webhid": "^5.51.1",
     "babel-runtime": "^6.26.0",
