--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ton-ledger-bridge",
+  "name": "everscale-ledger-bridge",
   "version": "0.0.0",
   "description": "",
   "scripts": {
