--- a/package.json
+++ b/package.json
@@ -3,23 +3,21 @@
   "version": "0.0.0",
   "description": "",
   "scripts": {
-    "start": "webpack --watch --config webpack.dev.js",
-    "build": "webpack --config webpack.prod.js",
+    "start": "vite",
+    "build": "vite build",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
   "license": "GNU GPL v3.0",
   "devDependencies": {
-    "clean-webpack-plugin": "^4.0.0",
-    "eslint": "^8.9.0",
-    "webpack": "^5.68.0",
-    "webpack-cli": "^4.9.2",
-    "webpack-merge": "^5.8.0"
+    "@babel/eslint-parser": "^7.19.1",
+    "@vitejs/plugin-basic-ssl": "^0.1.2",
+    "eslint": "^8.27.0",
+    "vite": "^3.2.3"
   },
   "dependencies": {
-    "@ledgerhq/hw-transport": "^6.24.1",
-    "@ledgerhq/hw-transport-webhid": "^6.24.1",
-    "buffer": "^6.0.3",
-    "process": "^0.11.10"
+    "@ledgerhq/hw-transport": "^6.27.6",
+    "@ledgerhq/hw-transport-webhid": "^6.27.6",
+    "buffer": "^6.0.3"
   }
 }
